--- a/src/main/resources/ni/edu/uni/fcys/programacion2/conversionfx/TemperatureFXML.fxml
+++ b/src/main/resources/ni/edu/uni/fcys/programacion2/conversionfx/TemperatureFXML.fxml
@@ -4,15 +4,18 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="252.0" prefWidth="354.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/15.0.1" fx:controller="ni.edu.uni.fcys.programacion2.conversionfx.controllers.TemperatureFXMLController">
+<AnchorPane id="AnchorPane" prefHeight="252.0" prefWidth="354.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ni.edu.uni.fcys.programacion2.conversionfx.controllers.TemperatureFXMLController">
     <stylesheets>
         <URL value="@/ni/edu/uni/fcys/programacion2/conversionfx/styles/temperaturefxml.css" />
     </stylesheets>
@@ -21,13 +24,13 @@
          <center>
             <VBox alignment="CENTER" prefHeight="225.0" prefWidth="354.0" BorderPane.alignment="CENTER">
                <children>
-                  <GridPane>
+                  <GridPane alignment="CENTER">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="169.0" minWidth="10.0" prefWidth="66.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="99.0" minWidth="10.0" prefWidth="39.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="209.0" minWidth="10.0" prefWidth="209.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
@@ -35,14 +38,24 @@
                         <Insets left="20.0" right="20.0" />
                      </padding>
                      <children>
-                        <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="131.0" text="Celcius" textAlignment="RIGHT" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                        <TextField fx:id="txtCelcius" GridPane.columnIndex="1" />
-                        <TextField fx:id="txtFha" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label prefHeight="17.0" prefWidth="131.0" text="Fharenheit" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                        <Button fx:id="btnCompute" mnemonicParsing="false" onAction="#btnComputeAction" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #5BB89C;" text="Compute" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #FFFFF;" text="Clean" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                        <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="131.0" text="Celsius:" textAlignment="RIGHT" GridPane.halignment="RIGHT" GridPane.valignment="CENTER" />
+                        <TextField fx:id="TxtCelsius" editable="false" prefHeight="25.0" prefWidth="128.0" GridPane.columnIndex="2" />
+                        <TextField fx:id="TxtFha" editable="false" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                        <Label prefHeight="17.0" prefWidth="131.0" text="Fharenheit:" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                        <RadioButton fx:id="rbtnCelsius" alignment="TOP_CENTER" mnemonicParsing="false" onAction="#rbtnCelsiusAction" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="Temperature" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <RadioButton fx:id="rbtnFharenheit" alignment="TOP_CENTER" mnemonicParsing="false" onAction="#rbtnFharenheitAction" toggleGroup="$Temperature" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
+                  <FlowPane alignment="CENTER" hgap="5.0" prefHeight="44.0" prefWidth="354.0">
+                     <children>
+                        <Button fx:id="btnCompute" mnemonicParsing="false" onAction="#btnComputeAction" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #5BB89C;" text="Compute" />
+                        <Button fx:id="btnClean" mnemonicParsing="false" onAction="#btnCleanAction" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #FFFFF;" text="Clean" />
+                     </children>
+                  </FlowPane>
                </children>
             </VBox>
          </center>
